<resources>
    <string name="app_name" translatable="false">星 胜 驾 校</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Return">返回</string>
    <string name="banquan">11</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_re__success">Re_SuccessActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_bbsdetails">BBSdetailsActivity</string>
    <string name="title_activity_enroll">EnrollActivity</string>
    <string name="title_activity_enroll_details">EnrollDetailsActivity</string>
    <string name="title_activity_check_stand">CheckStandActivity</string>
    <string name="title_activity_coach_info">CoachInfoActivity</string>
    <string name="title_activity_logo_do">LogoDoActivity</string>
    <string name="title_activity_coach_logo_do">CoachLogoDoActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- 字符资源 -->
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">全文</string>

    <string name="CoachTop">教练版本</string>
    <string name="CoachKe2">科 二 预 约</string>
    <string name="CoachKe3">科 三 预 约</string>
    <string name="CoachCenten">校 内 论 坛</string>
    <string name="Coachzixun">校 内 资 讯</string>
    <string name="postingbanbedTS"> 温 馨 提 示 :</string>
    <string name="postingbanbed">由于您的言行,您已经被系统禁止发帖!</string>
    <string name="closeposting">  关      闭  </string>
    <string name="jiazaizhong">加载中..</string>
    <string name="CoachMyinfo">我的资料</string>
    <string name="CoachMyStu">我的学员</string>
    <string name="CoachStuComments">学员评价</string>
    <string name="CoachBBS">留   言   板  </string>

    <!-- 字符资源 -->


    <!-- 圆形图片工具 -->
    <declare-styleable name="CircleImageView">
        <attr name="border_width" format="dimension" />
        <attr name="border_color" format="color" />
    </declare-styleable>

    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="title_activity_posting">PostingActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="title_activity_posting_album">PostingAlbumActivity</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_activity_coach_main">CoachMainActivity</string>
    <string name="title_activity_coach_order_ke2">CoachOrderKe2Activity</string>


</resources>
