<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/postingbanbedTS"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/gary" />

    <TextView
        android:id="@+id/posting_close_dialog_conten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/postingbanbed"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/gary" />

    <Button
        android:id="@+id/posting_close_dialog_closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/closeposting"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>