<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/coach_main_cehua_head_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/coachheadlog"
            android:clickable="true" />

        <TextView
            android:id="@+id/coach_main_cehua_head_coachname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.example.utils.MarqueeTextView
            android:id="@+id/coach_main_cehua_head_place"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/jiazaizhong"
            android:textColor="@color/wheat"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/coach_main_cehua_head_ke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="7dp"
            android:clickable="true"
            android:text="@string/jiazaizhong"
            android:textColor="@color/wheat"
            android:textSize="13sp" />

        <com.example.utils.MarqueeTextView
            android:id="@+id/coach_main_cehua_head_coachtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/jiazaizhong"
            android:textColor="@color/wheat"
            android:textSize="13sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/coach_main_cehua_head_Myinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/CoachMyinfo"
                    android:textColor="@color/slblue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/coach_main_cehua_head_Myinfo_msg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/my_you" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coach_main_cehua_head_Mystu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/CoachMyStu"
                    android:textColor="@color/slblue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/coach_main_cehua_head_Mystu_msg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/my_you" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coach_main_cehua_head_Stupingjia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/CoachStuComments"
                    android:textColor="@color/slblue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/coach_main_cehua_head_Stupingjia_msg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="11"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/my_you" />
                </RelativeLayout>
            </LinearLayout>
            
              <LinearLayout
                android:id="@+id/coach_main_cehua_head_thisdayorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="今日预约"
                    android:textColor="@color/slblue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/coach_main_cehua_head_thisdayorder_msg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="11"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/my_you" />
                </RelativeLayout>
            </LinearLayout>
            

            <LinearLayout
                android:id="@+id/coach_main_cehua_head_Messageboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="留  言  版"
                    android:textColor="@color/slblue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/coach_main_cehua_head_Messageboard_bbs"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="99+"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/my_you" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coach_main_cehua_head_gengxin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="更新版本"
                    android:textColor="@color/slblue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/coach_main_cehua_head_gengxinMsg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/my_you" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/coach_main_cehua_head_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/layout_bg"
                android:clickable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="退 出 登 录"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>